<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_date_desc"
                    android:checked="true"
                    android:title="@string/sort_date_desc" />
                <item
                    android:id="@+id/sort_date_asc"
                    android:title="@string/sort_date_asc" />
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/sort_title" />
            </group>
        </menu>
    </item>
</menu>
